# hipct-reg

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: tests.yml
docs/: api.rst  conf.py  guide.rst  index.rst  new_datasets.rst
docs/tutorial/: tutorial.py
notebooks/: new_reg_test.py  plot_size_xy.py  real_reg_test.py  sitk_transfroms.py  size_xy.py
notebooks/data/xy/: transform_A135_lung_VOI-01_2.0um_bm18_100.json  transform_A135_lung_VOI-01_2.0um_bm18_102.json  transform_A135_lung_VOI-01_2.0um_bm18_104.json  transform_A135_lung_VOI-01_2.0um_bm18_106.json  transform_A135_lung_VOI-01_2.0um_bm18_108.json  transform_A135_lung_VOI-01_2.0um_bm18_110.json  transform_A135_lung_VOI-01_2.0um_bm18_112.json  transform_A135_lung_VOI-01_2.0um_bm18_114.json  transform_A135_lung_VOI-01_2.0um_bm18_116.json  transform_A135_lung_VOI-01_2.0um_bm18_118.json  transform_A135_lung_VOI-01_2.0um_bm18_120.json  transform_A135_lung_VOI-01_2.0um_bm18_122.json  transform_A135_lung_VOI-01_2.0um_bm18_124.json  transform_A135_lung_VOI-01_2.0um_bm18_126.json  transform_A135_lung_VOI-01_2.0um_bm18_128.json  transform_A135_lung_VOI-01_2.0um_bm18_22.json  transform_A135_lung_VOI-01_2.0um_bm18_24.json  transform_A135_lung_VOI-01_2.0um_bm18_26.json  transform_A135_lung_VOI-01_2.0um_bm18_28.json  transform_A135_lung_VOI-01_2.0um_bm18_30.json  transform_A135_lung_VOI-01_2.0um_bm18_32.json  transform_A135_lung_VOI-01_2.0um_bm18_34.json  transform_A135_lung_VOI-01_2.0um_bm18_36.json  transform_A135_lung_VOI-01_2.0um_bm18_38.json  transform_A135_lung_VOI-01_2.0um_bm18_40.json  transform_A135_lung_VOI-01_2.0um_bm18_42.json  transform_A135_lung_VOI-01_2.0um_bm18_44.json  transform_A135_lung_VOI-01_2.0um_bm18_46.json  transform_A135_lung_VOI-01_2.0um_bm18_48.json  transform_A135_lung_VOI-01_2.0um_bm18_50.json  transform_A135_lung_VOI-01_2.0um_bm18_52.json  transform_A135_lung_VOI-01_2.0um_bm18_54.json  transform_A135_lung_VOI-01_2.0um_bm18_56.json  transform_A135_lung_VOI-01_2.0um_bm18_58.json  transform_A135_lung_VOI-01_2.0um_bm18_60.json  transform_A135_lung_VOI-01_2.0um_bm18_62.json  transform_A135_lung_VOI-01_2.0um_bm18_64.json  transform_A135_lung_VOI-01_2.0um_bm18_68.json  transform_A135_lung_VOI-01_2.0um_bm18_72.json  transform_A135_lung_VOI-01_2.0um_bm18_74.json  (+120 more)
scripts/: download_real_data.py  gen_common_point_spreadsheet.py  neuroglancer.py  neuroglancer_link.py  new_reg_test.py  read_common_point_spreadsheet.py  reg_initial_rotation.py  register_inventory.py  scrape_points.py  test_neuroglance.py  test_real_data.py  update_inventory.py
src/hipct_reg/: ITK_registration.py  ITK_visu.py  Master_ITK_registration.py  Master_ITK_visu.py  README.md  __init__.py  cli.py  data.py  helpers.py  inventory.py  reg_inventory.csv  reg_inventory_backup.csv  registration.py  types.py
src/hipct_reg/tests/: conftest.py  expected_reg_log.txt  helpers.py  test_helpers.py  test_registration.py
src/tests/: test_registration.py
