[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "d.stansby@ucl.ac.uk", name = "David Stansby"},
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "dask-image~=2023.08",
    "itk~=5.3",
    "numpy~=1.26",
    "psutil~=5.9",
    "scikit-image~=0.22",
    "simpleitk~=2.3",
    "click~=8.1.0"
]
description = "Code to register regions of interest with full organ datasets."
dynamic = [
    "version",
]
keywords = [
]
name = "hipct-reg"
readme = "README.md"
requires-python = ">=3.11"
license.file = "LICENSE.md"
urls.homepage = "https://github.com/HiPCTProject/hipct-reg"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "tifffile==2024.1.30",
]
dev = [
    "hipct-reg[test]",
    "build",
    "mypy",
    "pre-commit",
    "ruff",
    "tox>=4",
    "twine",
]

[tool.coverage]
run = {source = [
    "hipct_reg",
]}
paths.source = [
    "src",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    'build/.*',
]
strict = true
disallow_any_generics = false
disallow_untyped_calls = false
disallow_any_decorated = false
disallow_subclassing_any = false

[tool.ruff]
fix = true
force-exclude = true
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E501" # Line length
]
per-file-ignores = {"tests*" = [
    "INP001",
    "S101",
]}
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "NPY",
]
isort.known-first-party = [
    "hipct_reg",
]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = [
    "classmethod",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/hipct_reg/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
