[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [{ email = "d.stansby@ucl.ac.uk", name = "David Stansby" }]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "dask-image==2024.5.0",
    "hoa-tools @ git+https://github.com/HumanOrganAtlas/hoa-tools.git@2.0.0b1",
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "psutil==7.1.0",
    "scikit-image==0.25.2",
    "simpleitk==2.5.2",
    "zarr==3.1.1",
]
description = "Code to register regions of interest with full organ datasets."
dynamic = ["version"]
keywords = []
name = "hipct-reg"
readme = "README.md"
requires-python = ">=3.13"
license.file = "LICENSE.md"
urls.homepage = "https://github.com/HiPCTProject/hipct-reg"

[project.optional-dependencies]
docs = ["pydata-sphinx-theme", "sphinx", "sphinx-autoapi", "sphinx-gallery"]

[dependency-groups]
dev = ["pooch", "pytest", "pytest-cov", "tifffile==2025.10.4"]

[tool.coverage]
run = { source = ["hipct_reg"] }
paths.source = ["src"]

[tool.mypy]
disallow_any_generics = false
disallow_untyped_calls = false
exclude = ['build/.*', 'docs/auto_examples/*', 'notebooks/.*']
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
strict = true

[tool.ruff]
fix = true
force-exclude = true
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E501",   # Line length
    "NPY002", # Use new numpy RNG
]
per-file-ignores = { "tests*" = ["INP001", "S101"] }
select = ["E", "F", "I", "NPY", "UP", "W"]
isort.known-first-party = ["hipct_reg"]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = ["classmethod"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/hipct_reg/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
